# AI-paper-summarizer

./: .env.example  .gitignore  README.md  ai-paper-summarizer.code-workspace  makefile  pyproject.toml  requirements.txt
.github/workflows/: create-release-pull-request.yaml  create_release_pull_request.yaml  lambda_deploy.yaml  slack_notification.yaml  test.yaml
lambda/: extract_content.py  index.py  lambda_function.py  notion_utils.py  summarize.py  tagging.py
lambda_module/: __init__.py  file_downloader.py  lambda_function.py  llm.py  notion_utils.py  save_notion.py  text_processor.py
src/: lambda_function.py
src/application/: slack_handler.py
src/dependency_injector/: __init__.py
src/domain/: models.py  services.py
src/infrastructure/file_downloader/: file_downloader.py
src/infrastructure/llm/: _types.py  llm.py  utils.py
src/infrastructure/notion/: notion.py
src/infrastructure/slack/: slack.py
tests/: test_domain.py  test_lambda_function.py
