[tool.poetry]
name = "ai-paper-summarizer"
version = "0.1.0"
description = ""
authors = ["HirotoOsaka <ipocchi129@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_paper_summarizer"}]

[tool.poetry.dependencies]
python = "3.10.11"
openai = "^1.53.0"
notion-client = "^2.2.1"
arxiv = "^2.1.3"
pypdf = "^5.1.0"
markdownify = "^0.13.1"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
